fix - vertically aligned application name and logged user name

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,6 +9,8 @@
   color: $black;
 
   > .l-header-logged-user {
+    display: flex;
+    align-items: center;
     margin-left: auto;
   }
 }
